tests/ui/concurrent_cached_redis_disk_exclusive.stderr
error: `redis = true` and `disk = true` are mutually exclusive
 --> tests/ui/concurrent_cached_redis_disk_exclusive.rs:4:4
  |
4 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
